# mech-interp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: static_checks.yml
conf/mas/: debug.yaml  gelu-1l-sae.yaml  gpt2-small-oai-mlp-out.yaml  gpt2-small-sae.yaml  gpt2-small-sae_all.yaml  gpt2-small-sae_debug.yaml
conf/n2g/: debug.yaml  gelu-1l-sae.yaml  gpt2-small-oai-mlp-out.yaml  gpt2-small-sae.yaml
dtu_hpc/: mas_gelu-1l.sub  mas_gpt2-small.sub  mas_gpt2-small_all.sub  n2g_gelu-1l.sub  n2g_gelu-1l_1.sub  n2g_gelu-1l_2.sub  n2g_gpt2-small.sub
mechint/: hooks.py  layer.py
mechint/mas/: __init__.py  __main__.py  algorithm.py  mas_store.py  weighted_samples_store.py
mechint/n2g/: __init__.py  __main__.py  load_models.py
mechint/sae/: sae.py
sandbox/: bootstrap.ipynb  bootstrap_old.ipynb  gpt2-test.ipynb  mas_html.py  mas_test.ipynb  n2g_test.ipynb  n2g_test.py  sae.ipynb
