[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mechint"
version = "0.0.1"
description = "Mech interp research"
authors = [{ name = "albertsgarde", email = "albertsgarde@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mechint"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ['requirements_dev.txt'] }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["mechint"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F", "W", "N", "B"]
ignore = ["D203", "D213", "F722"]
isort.known-first-party = ["device", "models", "data"]
